# run_mr500

./: README.md  run.sh
ekf_odom/: CMakeLists.txt  package.xml
ekf_odom/src/: ekf_odom.cpp
ethzasl_xsens_driver/launch/: xsens_driver.launch
nmea_navsat_driver/launch/: demo.launch  other.launch
robot_pose_ekf/launch/: robot_pose_ekf.launch
robuster_mr/mr500_description/: CMakeLists.txt  package.xml  urdf.rviz
robuster_mr/mr500_description/launch/: arbotix_mr500.launch  display.launch  gazebo.launch  mr500model.launch
robuster_mr/mr500_description/meshes/: L1.STL  L2.STL  R1.STL  R2.STL  base_link.STL
robuster_mr/mr500_description/urdf/: mr500.csv  mr500.urdf
robuster_mr/robuster_mr_msgs/: CMakeLists.txt  package.xml
robuster_mr/robuster_mr_msgs/msg/: BatteryState.msg  DeviceState.msg  DeviceStatus.msg  LightState.msg  MileageState.msg  MotorState.msg  SingleLightState.msg  SingleMotorState.msg  encoderData.msg  imuData.msg  sonarData.msg
robuster_mr/robuster_mr_msgs/srv/: ErrorMask.srv  LightControl.srv  MappingControl.srv  MappingList.srv  MappingSave.srv  MappingSelect.srv  RobusterBaseControl.srv  controlCmdData.srv  enableUltrasound.srv  getDevInfo.srv  resetAlarm.srv  resetImu.srv  setPermission.srv
robuster_mr_bringup/: CMakeLists.txt  README.md  package.xml
robuster_mr_bringup/include/robuster_mr_bringup/: command.h  serial_node.h  socket.h  tcpclient.h  tcpclient_node.h  utily.h
robuster_mr_bringup/launch/: mr1000_bringup.launch  mr1500_bringup.launch  mr2000_bringup.launch  mr500_bringup.launch  robuster_base.launch  robuster_base_multi.launch  robuster_monitor.launch
robuster_mr_bringup/map/: wxc.pgm  wxc.yaml  zq_lobby.pgm  zq_lobby.yaml
robuster_mr_bringup/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  mux.yaml  nav_test_params.yaml
robuster_mr_bringup/rviz/: robuster_mr.rviz  view_gmapping.rviz  view_odom.rviz
robuster_mr_bringup/script/: daemon_services.py  daemon_services_ctrl.py  robuster_teleop_key.py
robuster_mr_bringup/src/serial/: command.cpp  serial_driver.cpp  serial_node.cpp
robuster_mr_bringup/src/socket/: socket.cpp  tcpclient.cpp  tcpclient_node.cpp
robuster_mr_bringup/system/: initenv.sh  mapping.service  navigation.service  robuster_base.service  robuster_monitor.service  ros_wrapper.sh  roscore.service
ros_rslidar-master/rslidar_driver/src/: rsdriver.cpp
ros_rslidar-master/rslidar_pointcloud/data/rs_lidar_16/: angle.csv  curves.csv
ros_rslidar-master/rslidar_pointcloud/launch/: rs_lidar_16.launch  rs_lidar_16_nonerviz.launch  rslidar2laserscan.launch
