<?xml version="1.0"?>
<package>
  <name>ekf_odom</name>
  <version>1.0.11</version>
  <description>ekf_odom</description>

  <maintainer email="522483402@qq.com">jj</maintainer>

  <license>BSD</license>
  <author email="522483402@qq.com">jj</author>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>geometry_msgs</run_depend>
  <export>

  </export>
</package>
